// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDefaultMarkup() should return correct default markup 1`] = `
"import { PText, PAccordion } from '@porsche-design-system/components-react'

export const App = (): JSX.Fragment => {
  return (
    <div>
      <PText>Some Text</PText><PAccordion>Some value</PAccordion>
    </div>
  );
}"
`;

exports[`getIndexTsMarkup() should return correct markup 1`] = `
"import * as React from 'react';
import { StrictMode } from \\"react\\";
import * as ReactDOMClient from \\"react-dom/client\\";
import { App } from \\"./App\\";
import { PorscheDesignSystemProvider } from \\"@porsche-design-system/components-react\\";
import './style.css';

const rootElement = document.getElementById(\\"root\\");
const root = ReactDOMClient.createRoot(rootElement);

root.render(
  <StrictMode>
    <PorscheDesignSystemProvider>
      <App />
    </PorscheDesignSystemProvider>
  </StrictMode>
);"
`;

exports[`getReactDependencies() should return correct dependencies object with additionalDependency "IMask" 1`] = `
Object {
  "@porsche-design-system/components-react": "2.15.0-beta.0",
  "@types/react": "^18.0.15",
  "@types/react-dom": "^18.0.6",
  "react": "^18.2.0",
  "react-dom": "^18.2.0",
  "react-imask": "^6.4.2",
}
`;

exports[`getReactDependencies() should return correct dependencies object without additionalDependencies 1`] = `
Object {
  "@porsche-design-system/components-react": "2.15.0-beta.0",
  "@types/react": "^18.0.15",
  "@types/react-dom": "^18.0.6",
  "react": "^18.2.0",
  "react-dom": "^18.2.0",
}
`;

exports[`getTsconfigMarkup() should have correct tsconfig setup 1`] = `
"{
  \\"compilerOptions\\": {
    \\"target\\": \\"es6\\",
    \\"lib\\": [\\"dom\\", \\"dom.iterable\\", \\"esnext\\"],
    \\"allowJs\\": true,
    \\"skipLibCheck\\": true,
    \\"esModuleInterop\\": true,
    \\"allowSyntheticDefaultImports\\": true,
    \\"strict\\": true,
    \\"strictNullChecks\\": false,
    \\"forceConsistentCasingInFileNames\\": true,
    \\"module\\": \\"esnext\\",
    \\"moduleResolution\\": \\"node\\",
    \\"resolveJsonModule\\": true,
    \\"isolatedModules\\": true,
    \\"noEmit\\": true,
    \\"jsx\\": \\"react-jsx\\",
    \\"noFallthroughCasesInSwitch\\": true
  },
  \\"include\\": [\\"src\\"]
}
"
`;
